{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 88,
  "lineage": "a50b8b12-0280-00e9-6b85-75165d150b33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:internet-gateway/igw-0de4cafc5e4bf0497",
            "id": "igw-0de4cafc5e4bf0497",
            "owner_id": "391976478325",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-igw"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:391976478325:loadbalancer/app/three-tier-app-app-alb/1c3c30301fe2deeb",
            "arn_suffix": "app/three-tier-app-app-alb/1c3c30301fe2deeb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-three-tier-app-app-alb-649769223.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:391976478325:loadbalancer/app/three-tier-app-app-alb/1c3c30301fe2deeb",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-app-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ebbb93da33bfe07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b2da4de02ee4d8b"
              },
              {
                "subnet_id": "subnet-0edf00e96f08275e1"
              }
            ],
            "subnets": [
              "subnet-02b2da4de02ee4d8b",
              "subnet-0edf00e96f08275e1"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-app-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-app-alb"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.private_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:391976478325:loadbalancer/app/three-tier-app-web-alb/ba730f34cf7823cc",
            "arn_suffix": "app/three-tier-app-web-alb/ba730f34cf7823cc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-app-web-alb-850893357.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:391976478325:loadbalancer/app/three-tier-app-web-alb/ba730f34cf7823cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-app-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d37b2b2670dd197e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0434b7d3890b30f85"
              },
              {
                "subnet_id": "subnet-05cd377b5106bf5cb"
              }
            ],
            "subnets": [
              "subnet-0434b7d3890b30f85",
              "subnet-05cd377b5106bf5cb"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-web-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-web-alb"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:security-group/sg-03ebbb93da33bfe07",
            "description": "Security group for application tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS outbound for updates",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.16.20.0/24",
                  "10.16.21.0/24"
                ],
                "description": "Allow outbound to database tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-03ebbb93da33bfe07",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/24",
                  "10.16.1.0/24"
                ],
                "description": "Allow inbound from web tier",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "three-tier-app-app-sg",
            "name_prefix": "",
            "owner_id": "391976478325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-app-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:security-group/sg-0d37b2b2670dd197e",
            "description": "Security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS outbound for updates",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.16.10.0/23",
                  "10.16.12.0/23"
                ],
                "description": "Allow outbound to application tier",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0d37b2b2670dd197e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "three-tier-app-web-sg",
            "name_prefix": "",
            "owner_id": "391976478325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-web-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:subnet/subnet-0edf00e96f08275e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf00e96f08275e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391976478325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-private-app-1",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-private-app-1",
              "Tier": "app"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:subnet/subnet-02b2da4de02ee4d8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.12.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b2da4de02ee4d8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391976478325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-private-app-2",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-private-app-2",
              "Tier": "app"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:subnet/subnet-0434b7d3890b30f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0434b7d3890b30f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391976478325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-public-1",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-public-1",
              "Tier": "web"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:subnet/subnet-05cd377b5106bf5cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cd377b5106bf5cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391976478325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-public-2",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-public-2",
              "Tier": "web"
            },
            "vpc_id": "vpc-04d50035dbc3e7e16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:391976478325:vpc/vpc-04d50035dbc3e7e16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0fc27a352097440b6",
            "default_route_table_id": "rtb-05af17010f43ca4cc",
            "default_security_group_id": "sg-086f3bbd05c68f2eb",
            "dhcp_options_id": "dopt-0b0cacd42281f4e03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d50035dbc3e7e16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05af17010f43ca4cc",
            "owner_id": "391976478325",
            "tags": {
              "Environment": "prod",
              "Name": "three-tier-app-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "three-tier-app-vpc"
            }
          }
        }
      ]
    }
  ]
}